--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-icons-kit": "^2.0.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-spinners-kit": "^1.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
